kubernetes/apps/home-automation/ear/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ear-wordpress
spec:
  selector:
    matchLabels:
      app: ear-wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ear-wordpress
    spec:
      containers:
      - image: wordpress:6-apache
        name: ear-wordpress
        ports:
          - containerPort: 80
        volumeMounts:
          - mountPath: /var/www/html
            subPath: ear_wordpress
            name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: unraid-pvc
