kubernetes/apps/home-automation/ear/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-ear
spec:
  ports:
    - port: 80
  selector:
    app: wordpress-ear
