kubernetes/apps/home-automation/ear/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ear-wordpress
  name: ear-wordpress-external
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.tnorbert.com"
spec:
  ingressClassName: external
  rules:
  - host: ear.tnorbert.com

    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ear-wordpress
            port:
              number: 80
